--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -45,15 +45,133 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error, root_mean_squared_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>buick skylark 320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>plymouth satellite</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>amc rebel sst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>ford torino</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "0  18.0          8         307.0       130.0    3504          12.0   \n",
+       "1  15.0          8         350.0       165.0    3693          11.5   \n",
+       "2  18.0          8         318.0       150.0    3436          11.0   \n",
+       "3  16.0          8         304.0       150.0    3433          12.0   \n",
+       "4  17.0          8         302.0       140.0    3449          10.5   \n",
+       "\n",
+       "   model_year origin                       name  \n",
+       "0          70    usa  chevrolet chevelle malibu  \n",
+       "1          70    usa          buick skylark 320  \n",
+       "2          70    usa         plymouth satellite  \n",
+       "3          70    usa              amc rebel sst  \n",
+       "4          70    usa                ford torino  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import seaborn as sns\n",
     "\n",
@@ -82,12 +200,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5d79f1cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(392, 9)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here..."
+    "# Your answer here...\n",
+    "mpg_data.shape # ANSWER: (392, 9) - (rows, columns)"
    ]
   },
   {
@@ -100,12 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ac306190",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here..."
+    "# Your answer here...\n",
+    "mpg_data['mpg'].dtype # ANSWER: float64 - floating point (decimal)\n",
+    "# MPG (Miles Per Gallon) - describes how many miles a car can make using 1 gallon of fuel."
    ]
   },
   {
@@ -113,7 +256,7 @@
    "id": "6d759089",
    "metadata": {},
    "source": [
-    "Your explanation... \n"
+    "MPG (Miles Per Gallon) - describes how many miles a car can make using 1 gallon of fuel."
    ]
   },
   {
@@ -126,12 +269,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9f034a5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>4278</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>73</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>pontiac grand prix</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>4951</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>73</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>buick electra 225 custom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>3086</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>buick estate wagon (sw)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>4425</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>pontiac catalina</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>454.0</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>4354</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>chevrolet impala</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "116  16.0          8         400.0       230.0    4278           9.5   \n",
+       "95   12.0          8         455.0       225.0    4951          11.0   \n",
+       "13   14.0          8         455.0       225.0    3086          10.0   \n",
+       "8    14.0          8         455.0       225.0    4425          10.0   \n",
+       "6    14.0          8         454.0       220.0    4354           9.0   \n",
+       "\n",
+       "     model_year origin                      name  \n",
+       "116          73    usa        pontiac grand prix  \n",
+       "95           73    usa  buick electra 225 custom  \n",
+       "13           70    usa   buick estate wagon (sw)  \n",
+       "8            70    usa          pontiac catalina  \n",
+       "6            70    usa          chevrolet impala  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your answer here... "
+    "# Your answer here... \n",
+    "mpg_data.sort_values(by='horsepower', ascending=False).head(5)"
    ]
   },
   {
@@ -144,12 +406,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1b91233e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here..."
+    "# Your answer here...\n",
+    "print(mpg_data.shape[1]-1) # output: 8"
    ]
   },
   {
@@ -225,7 +496,16 @@
    "id": "f67e57ab",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "As we can see from the plot:\n",
+    "1. The more acceleration value vehicle has the more miles it can make.\n",
+    "2. The more cylinders value vehicle has the less miles it can make.\n",
+    "3. The more displacement value vehicle has the less miles it can make.\n",
+    "4. The more horsepower value vehicle has the less miles it can make.\n",
+    "5. The younger the vehicle the more miles it can make.\n",
+    "6. The more weight value vehicle has the less miles it can make.\n",
+    "\n",
+    "Which makes sense maybe except acceleration."
    ]
   },
   {
@@ -241,7 +521,8 @@
    "id": "843f9eef",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "Plotted RED line defines Linear Regression concept."
    ]
   },
   {
@@ -257,7 +538,8 @@
    "id": "2ea782fc",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "Most of data points in the dataset do not fall along the plotted line and it is because of cons of the Linear Regression method. In additioon to that there might be outliers or exceptions in the dataset."
    ]
   },
   {
@@ -274,12 +556,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "399225f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here..."
+    "# Your answer here...\n",
+    "mpg_train, mpg_test = train_test_split(mpg_data, train_size=0.75, random_state=42)"
    ]
   },
   {
@@ -292,19 +575,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ac1e1117",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      predictor     slope  intercept\n",
+      "0  acceleration  0.057588 -15.047371\n",
+      "1     cylinders -0.160143 -15.047371\n",
+      "2  displacement  0.000373 -15.047371\n",
+      "3    horsepower -0.001899 -15.047371\n",
+      "4    model_year  0.762270 -15.047371\n",
+      "5        weight -0.006457 -15.047371\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here ...\n",
     "\n",
-    "numeric_predictors = 🤷‍♂️\n",
+    "numeric_predictors = mpg_data.select_dtypes(include=[float, int]).columns.difference(['mpg'])\n",
+    "\n",
+    "lm = LinearRegression()\n",
+    "lm.fit(mpg_train[numeric_predictors], mpg_train['mpg'])\n",
     "\n",
     "\n",
     "# Create a DataFrame containing the slope (coefficients) and intercept\n",
     "coefficients_df = pd.DataFrame({\n",
-    "    \"predictor\": numeric_predictors.columns,\n",
+    "    \"predictor\": numeric_predictors,\n",
     "    \"slope\": lm.coef_,\n",
     "    \"intercept\": [lm.intercept_] * len(lm.coef_)\n",
     "})\n",
@@ -330,12 +630,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ffefa9f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Root Mean Squared Error is: 3.185474951339154\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here ..."
+    "# Your code here ...\n",
+    "y_pred = lm.predict(mpg_test[numeric_predictors])\n",
+    "rmse = root_mean_squared_error(mpg_test['mpg'], y_pred)\n",
+    "print(f'The Root Mean Squared Error is: {rmse}')"
    ]
   },
   {
@@ -408,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.18"
   },
   "vscode": {
    "interpreter": {
