--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -50,10 +50,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>buick skylark 320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>plymouth satellite</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>amc rebel sst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>ford torino</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "0  18.0          8         307.0       130.0    3504          12.0   \n",
+       "1  15.0          8         350.0       165.0    3693          11.5   \n",
+       "2  18.0          8         318.0       150.0    3436          11.0   \n",
+       "3  16.0          8         304.0       150.0    3433          12.0   \n",
+       "4  17.0          8         302.0       140.0    3449          10.5   \n",
+       "\n",
+       "   model_year origin                       name  \n",
+       "0          70    usa  chevrolet chevelle malibu  \n",
+       "1          70    usa          buick skylark 320  \n",
+       "2          70    usa         plymouth satellite  \n",
+       "3          70    usa              amc rebel sst  \n",
+       "4          70    usa                ford torino  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import seaborn as sns\n",
     "\n",
@@ -82,12 +200,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5d79f1cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dataset contains 392 observations (rows) and 9 variables (columns).\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here..."
+    "rows, columns= mpg_data.shape\n",
+    "print(f\"The dataset contains {rows} observations (rows) and {columns} variables (columns).\")"
    ]
   },
   {
@@ -100,12 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ac306190",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The response variable-MPG (Miles per Gallon) is an integer variable type or to be precise its a numerical continuous variable\n",
+      "The data type of the respnse variable is float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here..."
+    "print (\"The response variable-MPG (Miles per Gallon) is an integer variable type or to be precise its a numerical continuous variable\")\n",
+    "mpg_data_type=mpg_data['mpg'].dtype\n",
+    "print(f\"The data type of the respnse variable is {mpg_data_type}\")"
    ]
   },
   {
@@ -126,12 +264,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9f034a5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116    230.0\n",
+      "8      225.0\n",
+      "13     225.0\n",
+      "95     225.0\n",
+      "6      220.0\n",
+      "Name: horsepower, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here... "
+    "top_5_horsepower = mpg_data['horsepower'].nlargest(5)\n",
+    "print(top_5_horsepower)"
    ]
   },
   {
@@ -144,12 +296,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "1b91233e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictor variables: ['cylinders', 'displacement', 'horsepower', 'weight', 'acceleration', 'model_year']\n",
+      "Number of predictor variables: 6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here..."
+    "predictor_variables = mpg_data.drop(columns=['mpg' ,'name','origin'])\n",
+    "print(f\"Predictor variables: {list(predictor_variables.columns)}\")\n",
+    "num_predictors = len(predictor_variables.columns)\n",
+    "print(f\"Number of predictor variables: {num_predictors}\")"
    ]
   },
   {
@@ -408,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.6"
   },
   "vscode": {
    "interpreter": {
